0.6/_sources/user-guide/vision/auto_tutorials/plot_custom_task_tutorial.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/vision/auto_tutorials/plot_custom_task_tutorial.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_vision_auto_tutorials_plot_custom_task_tutorial.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_vision_auto_tutorials_plot_custom_task_tutorial.py:


====================
Custom Task Tutorial
====================

Computer vision is an umbrella term for a wide spectrum of objectives models are trained for. These objective reflect
on the structure of the data and the possible actions on it.

The first step before running any Deepchecks checks is to create an implementation of
:class:`VisionData <vision_data.VisionData>`. Each implementation represents and standardize a computer vision task
and allows to run a more complex checks which relates to the given task's characteristics. There are default
base classes for a few known tasks like object detection and classification, however not all tasks have a base
implementation, meaning you will have to create your own task.

When creating your own task you will be limited to run checks which are agnostic to the specific task type.
For example performance checks that uses IOU works only on object detection tasks, since they need to know
the exact bounding box format in order to run, while other checks that uses
:doc:`/user-guide/vision/vision_properties` or custom metrics are agnostic to the task type.

In this guide we will implement a custom instance segmentation task and run checks on it.

1. `Defining the Data <#defining-the-data>`__
2. `Implement Custom Task <#implement-custom-task>`__
3. `Implement Custom Properties <#implement-custom-properties>`__
4. `Implement Custom Metric <#implement-custom-metric>`__

.. GENERATED FROM PYTHON SOURCE LINES 29-33

Defining the Data
=================
First we will define a `PyTorch Dataset <https://pytorch.org/tutorials/beginner/basics/data_tutorial.html>`_.
of COCO-128 segmentation task. This part represents your own code, and is not yet Deepchecks related.

.. GENERATED FROM PYTHON SOURCE LINES 33-191

.. code-block:: default


    import contextlib
    import os
    import typing as t
    from pathlib import Path

    import albumentations as A
    import matplotlib.pyplot as plt
    import numpy as np
    import torch
    import torchvision.transforms.functional as F
    from albumentations.pytorch.transforms import ToTensorV2
    from PIL import Image, ImageDraw
    from torch.utils.data import DataLoader
    from torchvision.datasets import VisionDataset
    from torchvision.datasets.utils import download_and_extract_archive
    from torchvision.utils import draw_segmentation_masks


    class CocoSegmentDataset(VisionDataset):
        """An instance of PyTorch VisionData the represents the COCO128-segments dataset.

        Parameters
        ----------
        root : str
            Path to the root directory of the dataset.
        name : str
            Name of the dataset.
        train : bool
            if `True` train dataset, otherwise test dataset
        transforms : Callable, optional
            A function/transform that takes in an PIL image and returns a transformed version.
            E.g, transforms.RandomCrop
        """

        TRAIN_FRACTION = 0.5

        def __init__(
                self,
                root: str,
                name: str,
                train: bool = True,
                transforms: t.Optional[t.Callable] = None,
        ) -> None:
            super().__init__(root, transforms=transforms)

            self.train = train
            self.root = Path(root).absolute()
            self.images_dir = Path(root) / 'images' / name
            self.labels_dir = Path(root) / 'labels' / name

            images: t.List[Path] = sorted(self.images_dir.glob('./*.jpg'))
            labels: t.List[t.Optional[Path]] = []

            for image in images:
                label = self.labels_dir / f'{image.stem}.txt'
                labels.append(label if label.exists() else None)

            assert len(images) != 0, 'Did not find folder with images or it was empty'
            assert not all(l is None for l in labels), 'Did not find folder with labels or it was empty'

            train_len = int(self.TRAIN_FRACTION * len(images))

            if self.train is True:
                self.images = images[0:train_len]
                self.labels = labels[0:train_len]
            else:
                self.images = images[train_len:]
                self.labels = labels[train_len:]

        def __getitem__(self, idx: int) -> t.Tuple[Image.Image, np.ndarray]:
            """Get the image and label at the given index."""
            image = Image.open(str(self.images[idx]))
            label_file = self.labels[idx]

            masks = []
            classes = []
            if label_file is not None:
                for label_str in label_file.open('r').read().strip().splitlines():
                    label = np.array(label_str.split(), dtype=np.float32)
                    class_id = int(label[0])
                    # Transform normalized coordinates to un-normalized
                    coordinates = (label[1:].reshape(-1, 2) * np.array([image.width, image.height])).reshape(-1).tolist()
                    # Create mask image
                    mask = Image.new('L', (image.width, image.height), 0)
                    ImageDraw.Draw(mask).polygon(coordinates, outline=1, fill=1)
                    # Add to list
                    masks.append(np.array(mask, dtype=bool))
                    classes.append(class_id)

            if self.transforms is not None:
                # Albumentations accepts images as numpy
                transformed = self.transforms(image=np.array(image), masks=masks)
                image = transformed['image']
                masks = transformed['masks']
                # Transform masks to tensor of (num_masks, H, W)
                if masks:
                    masks = torch.stack([torch.from_numpy(m) for m in masks])
                else:
                    masks = torch.empty((0, 3))

            return image, classes, masks

        def __len__(self):
            return len(self.images)

        @classmethod
        def load_or_download(cls, root: Path, train: bool) -> 'CocoSegmentDataset':
            coco_dir = root / 'coco128'
            folder = 'train2017'

            if not coco_dir.exists():
                url = 'https://ultralytics.com/assets/coco128-segments.zip'
                md5 = 'e29ec06014d1e06b58b6ffe651c0b34f'

                with open(os.devnull, 'w', encoding='utf8') as f, contextlib.redirect_stdout(f):
                    download_and_extract_archive(
                        url,
                        download_root=str(root),
                        extract_root=str(root),
                        md5=md5
                    )
            
                try:
                    # remove coco128's README.txt so that it does not come in docs
                    os.remove("coco128/README.txt")
                except:
                    pass
            return CocoSegmentDataset(coco_dir, folder, train=train, transforms=A.Compose([ToTensorV2()]))


    # Download and load the datasets
    curr_dir = Path('.')
    train_ds = CocoSegmentDataset.load_or_download(curr_dir, train=True)
    test_ds = CocoSegmentDataset.load_or_download(curr_dir, train=False)


    def batch_collate(batch):
        """Function which gets list of samples from `CocoSegmentDataset` and combine them to a batch."""
        images, classes, masks = zip(*batch)
        return list(images), list(classes), list(masks)


    # Create DataLoaders
    train_data_loader = DataLoader(
        dataset=train_ds,
        batch_size=32,
        shuffle=False,
        collate_fn=batch_collate
    )

    test_data_loader = DataLoader(
        dataset=test_ds,
        batch_size=32,
        shuffle=False,
        collate_fn=batch_collate
    )





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

      0%|          | 0/7115649 [00:00<?, ?it/s]      3%|2         | 212992/7115649 [00:00<00:13, 530507.69it/s]     48%|####8     | 3438592/7115649 [00:00<00:00, 8856448.77it/s]    7115776it [00:00, 13675344.26it/s]                            




.. GENERATED FROM PYTHON SOURCE LINES 192-193

Visualizing that we loaded our datasets correctly:

.. GENERATED FROM PYTHON SOURCE LINES 193-206

.. code-block:: default


    masked_images = [draw_segmentation_masks(train_ds[i][0], masks=train_ds[i][2], alpha=0.7)
                     for i in range(5)]

    fix, axs = plt.subplots(ncols=len(masked_images), figsize=(20, 20))
    for i, img in enumerate(masked_images):
        img = img.detach()
        img = F.to_pil_image(img)
        axs[i].imshow(np.asarray(img))
        axs[i].set(xticklabels=[], yticklabels=[], xticks=[], yticks=[])

    fix




.. image-sg:: /user-guide/vision/auto_tutorials/images/sphx_glr_plot_custom_task_tutorial_001.png
   :alt: plot custom task tutorial
   :srcset: /user-guide/vision/auto_tutorials/images/sphx_glr_plot_custom_task_tutorial_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <Figure size 2000x2000 with 5 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 207-215

Implement Custom Task
=====================
With our data and model ready we can write the task class.

With the built-in base classes, the checks are accessing directly the values which return from the functions
`infer_on_batch` and `batch_to_labels` and therefore they require a standard format. But with custom task, these
functions' values are not used directly, so we can just return our own data as is. On the other hand the  functions
`batch_to_images` and `get_classes` are used so we will need to make sure our data is in the expected format.

.. GENERATED FROM PYTHON SOURCE LINES 215-243

.. code-block:: default


    from typing import List, Sequence

    from deepchecks.vision import VisionData


    class MyCustomSegmentationData(VisionData):
        """Class for loading the COCO segmentation dataset."""

        def get_classes(self, batch_labels) -> List[List[int]]:
            """Return per label a list of classes (by id) in it."""
            # The input `batch_labels` is the result of `batch_to_labels` function.
            return batch_labels[0]

        def batch_to_labels(self, batch):
            """Extract from the batch only the labels. No standard format is needed here."""
            _, classes, masks = batch
            return classes, masks

        def infer_on_batch(self, batch, model, device):
            """Infer on a batch of images. No standard format is needed here."""
            predictions = model.to(device)(batch[0])
            return predictions

        def batch_to_images(self, batch) -> Sequence[np.ndarray]:
            """Convert the batch to a list of images as (H, W, C) 3D numpy array per image."""
            return [tensor.numpy().transpose((1, 2, 0)) for tensor in batch[0]]








.. GENERATED FROM PYTHON SOURCE LINES 244-246

Now we are able to run checks that use only the image data, since it's in the standard Deepchecks format.
Let's run SimpleFeatureContribution check with our task

.. GENERATED FROM PYTHON SOURCE LINES 246-297

.. code-block:: default


    from deepchecks.vision.checks import SimpleFeatureContribution

    # Create our task with the `DataLoader`s we defined before.
    train_task = MyCustomSegmentationData(train_data_loader)
    test_task = MyCustomSegmentationData(test_data_loader)

    result = SimpleFeatureContribution().run(train_task, test_task)
    result

    # Now in order to run more check, we'll need to define custom properties or metrics.
    #
    # Implement Custom Properties
    # ===========================
    #
    # In order to run checks that are using label or prediction properties we'll have to implement
    # a custom :doc:`properties </user-guide/vision/vision_properties>`. We'll write label properties and run a label drift
    # check.


    from itertools import chain

    from deepchecks.vision.checks import TrainTestLabelDrift

    # The labels object is the result of `batch_to_labels` function we defined earlier. The property should return a flat
    # list of values.


    def number_of_detections(labels) -> List[int]:
        """Return a list containing the number of detections per sample in batch."""
        classes, all_masks = labels
        return [sample_masks.shape[0] for sample_masks in all_masks]


    def classes_in_labels(labels: List[torch.Tensor]) -> List[int]:
        """Return a list containing the classes in batch."""
        classes, all_masks = labels
        # Flatten list of lists into a single list
        return list(chain.from_iterable(classes))


    # We will pass this object as parameter to checks that are using label properties
    label_properties = [
        {'name': '# Detections per Label', 'method': number_of_detections, 'output_type': 'discrete'},
        {'name': 'Classes in Labels', 'method': classes_in_labels, 'output_type': 'class_id'}
    ]


    result = TrainTestLabelDrift(label_properties=label_properties).run(train_task, test_task)
    result





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Validating Input:   0%| | 0/1 [00:00<?, ? /s]                                                 Ingesting Batches - Train Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Train Dataset:  50%|# | 1/2 [00:09<00:09,  9.58s/ Batch]    Ingesting Batches - Train Dataset: 100%|##| 2/2 [00:17<00:00,  8.75s/ Batch]                                                                                Ingesting Batches - Test Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Test Dataset:  50%|# | 1/2 [00:06<00:06,  6.55s/ Batch]    Ingesting Batches - Test Dataset: 100%|##| 2/2 [00:12<00:00,  6.45s/ Batch]                                                                               Computing Check:   0%| | 0/1 [00:00<?, ? Check/s]    Computing Check: 100%|#| 1/1 [00:06<00:00,  6.55s/ Check]                                                             Validating Input:   0%| | 0/1 [00:00<?, ? /s]                                                 Ingesting Batches - Train Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Train Dataset:  50%|# | 1/2 [00:00<00:00,  6.53 Batch/s]    Ingesting Batches - Train Dataset: 100%|##| 2/2 [00:00<00:00,  6.85 Batch/s]                                                                                Ingesting Batches - Test Dataset:   0%|  | 0/2 [00:00<?, ? Batch/s]    Ingesting Batches - Test Dataset:  50%|# | 1/2 [00:00<00:00,  7.91 Batch/s]    Ingesting Batches - Test Dataset: 100%|##| 2/2 [00:00<00:00,  8.32 Batch/s]                                                                               Computing Check:   0%| | 0/1 [00:00<?, ? Check/s]                                                 

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    <script
        src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"
        integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg=="
        crossorigin="anonymous"
        referrerpolicy="no-referrer">
    </script>

    <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
    <script type="text/javascript">if (window.MathJax) {MathJax.Hub.Config({SVG: {font: "STIX-Web"}});}</script>
    <script type="text/javascript">
        if (typeof require !== 'undefined') {
            require.undef("plotly");
            requirejs.config({
                paths: {'plotly': ['https://cdn.plot.ly/plotly-2.8.3.min']}
            });
            require(
                ['plotly'],
                function(Plotly) {
                    window._Plotly = Plotly;
                    window.Plotly = Plotly;
                    console.log('Loaded plotly successfully');
                },
                function() {console.log('Failed to load plotly')}
            );
        } else {
            console.log('requirejs is not present');
        }
    </script>
    <h4><b>Train Test Label Drift</b></h4><p>    Calculate label drift between train dataset and test dataset, using statistical measures.</p><h5><b>Additional Outputs</b></h5><div><span>The Drift score is a measure for the difference between two distributions. In this check, drift is measured for the distribution of the following label properties: ['# Detections per Label', 'Classes in Labels'].</span></div><div>                            <div id="dce1f7d0-cbd3-4431-98da-b939ac1eb1f6" class="plotly-graph-div" style="height:400px; width:700px;"></div>            <script type="text/javascript">                require(["plotly"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById("dce1f7d0-cbd3-4431-98da-b939ac1eb1f6")) {                    Plotly.newPlot(                        "dce1f7d0-cbd3-4431-98da-b939ac1eb1f6",                        [{"base":0,"marker":{"color":"#01B8AA"},"offsetgroup":"0","orientation":"h","showlegend":false,"x":[0.1],"y":["Drift Score"],"type":"bar","xaxis":"x","yaxis":"y"},{"base":0.1,"marker":{"color":"#F2C80F"},"offsetgroup":"0","orientation":"h","showlegend":false,"x":[0.1],"y":["Drift Score"],"type":"bar","xaxis":"x","yaxis":"y"},{"base":0.2,"marker":{"color":"#FE9666"},"offsetgroup":"0","orientation":"h","showlegend":false,"x":[0.09999999999999998],"y":["Drift Score"],"type":"bar","xaxis":"x","yaxis":"y"},{"base":0.3,"marker":{"color":"#FD625E"},"offsetgroup":"0","orientation":"h","showlegend":false,"x":[0.06784698965998964],"y":["Drift Score"],"type":"bar","xaxis":"x","yaxis":"y"},{"marker":{"color":"#00008b"},"name":"Train Dataset","x":["0","25","40","41","43","44","45","54","73","77"],"y":[0.2564575645756458,0.033210332103321034,0.027675276752767528,0.055350553505535055,0.025830258302583026,0.03690036900369004,0.04428044280442804,0.0,0.00922509225092251,0.007380073800738007],"type":"bar","xaxis":"x2","yaxis":"y2"},{"marker":{"color":"#69b3a2"},"name":"Test Dataset","x":["0","25","40","41","43","44","45","54","73","77"],"y":[0.2971576227390181,0.0,0.002583979328165375,0.015503875968992248,0.00516795865633075,0.00516795865633075,0.0103359173126615,0.03617571059431524,0.06201550387596899,0.04392764857881137],"type":"bar","xaxis":"x2","yaxis":"y2"}],                        {"template":{"data":{"bar":[{"error_x":{"color":"#2a3f5f"},"error_y":{"color":"#2a3f5f"},"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"bar"}],"barpolar":[{"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"barpolar"}],"carpet":[{"aaxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"baxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"type":"carpet"}],"choropleth":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"choropleth"}],"contour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"contour"}],"contourcarpet":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"contourcarpet"}],"heatmap":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmap"}],"heatmapgl":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmapgl"}],"histogram":[{"marker":{"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"histogram"}],"histogram2d":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2d"}],"histogram2dcontour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2dcontour"}],"mesh3d":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"mesh3d"}],"parcoords":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"parcoords"}],"pie":[{"automargin":true,"type":"pie"}],"scatter":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter"}],"scatter3d":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter3d"}],"scattercarpet":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattercarpet"}],"scattergeo":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergeo"}],"scattergl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergl"}],"scattermapbox":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattermapbox"}],"scatterpolar":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolar"}],"scatterpolargl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolargl"}],"scatterternary":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterternary"}],"surface":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"surface"}],"table":[{"cells":{"fill":{"color":"#EBF0F8"},"line":{"color":"white"}},"header":{"fill":{"color":"#C8D4E3"},"line":{"color":"white"}},"type":"table"}]},"layout":{"annotationdefaults":{"arrowcolor":"#2a3f5f","arrowhead":0,"arrowwidth":1},"autotypenumbers":"strict","coloraxis":{"colorbar":{"outlinewidth":0,"ticks":""}},"colorscale":{"diverging":[[0,"#8e0152"],[0.1,"#c51b7d"],[0.2,"#de77ae"],[0.3,"#f1b6da"],[0.4,"#fde0ef"],[0.5,"#f7f7f7"],[0.6,"#e6f5d0"],[0.7,"#b8e186"],[0.8,"#7fbc41"],[0.9,"#4d9221"],[1,"#276419"]],"sequential":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"sequentialminus":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]},"colorway":["#636efa","#EF553B","#00cc96","#ab63fa","#FFA15A","#19d3f3","#FF6692","#B6E880","#FF97FF","#FECB52"],"font":{"color":"#2a3f5f"},"geo":{"bgcolor":"white","lakecolor":"white","landcolor":"#E5ECF6","showlakes":true,"showland":true,"subunitcolor":"white"},"hoverlabel":{"align":"left"},"hovermode":"closest","mapbox":{"style":"light"},"paper_bgcolor":"white","plot_bgcolor":"#E5ECF6","polar":{"angularaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","radialaxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"scene":{"xaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"yaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"zaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"}},"shapedefaults":{"line":{"color":"#2a3f5f"}},"ternary":{"aaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"baxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","caxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"title":{"x":0.05},"xaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2},"yaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2}}},"xaxis":{"anchor":"y","domain":[0.0,1.0],"showgrid":false,"gridcolor":"black","linecolor":"black","range":[0,0.4678469896599896],"dtick":0.05,"fixedrange":true},"yaxis":{"anchor":"x","domain":[0.9400000000000001,1.0],"showgrid":false,"showline":false,"showticklabels":false,"zeroline":false,"color":"black","fixedrange":true},"xaxis2":{"anchor":"y2","domain":[0.0,1.0],"type":"category"},"yaxis2":{"anchor":"x2","domain":[0.26,0.74],"fixedrange":true,"range":[0,0.3268733850129199],"title":{"text":"Frequency"}},"xaxis3":{"anchor":"y3","domain":[0.0,1.0]},"yaxis3":{"anchor":"x3","domain":[0.0,0.06]},"annotations":[{"font":{"size":16},"showarrow":false,"text":"Drift Score (PSI)","x":0.5,"xanchor":"center","xref":"paper","y":1.0,"yanchor":"bottom","yref":"paper"},{"font":{"size":16},"showarrow":false,"text":"Distribution Plot","x":0.5,"xanchor":"center","xref":"paper","y":0.74,"yanchor":"bottom","yref":"paper"},{"showarrow":false,"text":"* Showing the top 10 largest difference between categories out of total 71 categories.<br>Shown data is 49.63% of train data and 47.8% of test data.","x":0,"xanchor":"left","xref":"paper","y":-0.2,"yref":"paper"}],"legend":{"title":{"text":"Legend"},"yanchor":"top","y":0.6},"title":{"text":"Classes in Labels","x":0.5,"xanchor":"center"},"width":700,"height":400,"bargroupgap":0},                        {"responsive": true}                    ).then(function(){
                            
    var gd = document.getElementById('dce1f7d0-cbd3-4431-98da-b939ac1eb1f6');
    var x = new MutationObserver(function (mutations, observer) {{
            var display = window.getComputedStyle(gd).display;
            if (!display || display === 'none') {{
                console.log([gd, 'removed!']);
                Plotly.purge(gd);
                observer.disconnect();
            }}
    }});

    // Listen for the removal of the full notebook cells
    var notebookContainer = gd.closest('#notebook-container');
    if (notebookContainer) {{
        x.observe(notebookContainer, {childList: true});
    }}

    // Listen for the clearing of the current output cell
    var outputEl = gd.closest('.output');
    if (outputEl) {{
        x.observe(outputEl, {childList: true});
    }}

                            })                };                });            </script>        </div><div>                            <div id="af294b75-16db-4401-875d-dcefe5ab6c05" class="plotly-graph-div" style="height:400px; width:700px;"></div>            <script type="text/javascript">                require(["plotly"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById("af294b75-16db-4401-875d-dcefe5ab6c05")) {                    Plotly.newPlot(                        "af294b75-16db-4401-875d-dcefe5ab6c05",                        [{"base":0,"marker":{"color":"#01B8AA"},"offsetgroup":"0","orientation":"h","showlegend":false,"x":[0.1],"y":["Drift Score"],"type":"bar","xaxis":"x","yaxis":"y"},{"base":0.1,"marker":{"color":"#F2C80F"},"offsetgroup":"0","orientation":"h","showlegend":false,"x":[0.1],"y":["Drift Score"],"type":"bar","xaxis":"x","yaxis":"y"},{"base":0.2,"marker":{"color":"#FE9666"},"offsetgroup":"0","orientation":"h","showlegend":false,"x":[0.06409829662840266],"y":["Drift Score"],"type":"bar","xaxis":"x","yaxis":"y"},{"marker":{"color":"#00008b"},"name":"Train Dataset","x":[1,2,4,5,8,9,11,12,13,14],"y":[0.0625,0.1875,0.125,0.046875,0.109375,0.015625,0.015625,0.0,0.03125,0.015625],"type":"bar","xaxis":"x2","yaxis":"y2"},{"marker":{"color":"#69b3a2"},"name":"Test Dataset","x":[1,2,4,5,8,9,11,12,13,14],"y":[0.125,0.21875,0.09375,0.0625,0.03125,0.0,0.0625,0.015625,0.046875,0.03125],"type":"bar","xaxis":"x2","yaxis":"y2"}],                        {"template":{"data":{"bar":[{"error_x":{"color":"#2a3f5f"},"error_y":{"color":"#2a3f5f"},"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"bar"}],"barpolar":[{"marker":{"line":{"color":"#E5ECF6","width":0.5},"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"barpolar"}],"carpet":[{"aaxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"baxis":{"endlinecolor":"#2a3f5f","gridcolor":"white","linecolor":"white","minorgridcolor":"white","startlinecolor":"#2a3f5f"},"type":"carpet"}],"choropleth":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"choropleth"}],"contour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"contour"}],"contourcarpet":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"contourcarpet"}],"heatmap":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmap"}],"heatmapgl":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"heatmapgl"}],"histogram":[{"marker":{"pattern":{"fillmode":"overlay","size":10,"solidity":0.2}},"type":"histogram"}],"histogram2d":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2d"}],"histogram2dcontour":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"histogram2dcontour"}],"mesh3d":[{"colorbar":{"outlinewidth":0,"ticks":""},"type":"mesh3d"}],"parcoords":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"parcoords"}],"pie":[{"automargin":true,"type":"pie"}],"scatter":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter"}],"scatter3d":[{"line":{"colorbar":{"outlinewidth":0,"ticks":""}},"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatter3d"}],"scattercarpet":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattercarpet"}],"scattergeo":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergeo"}],"scattergl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattergl"}],"scattermapbox":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scattermapbox"}],"scatterpolar":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolar"}],"scatterpolargl":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterpolargl"}],"scatterternary":[{"marker":{"colorbar":{"outlinewidth":0,"ticks":""}},"type":"scatterternary"}],"surface":[{"colorbar":{"outlinewidth":0,"ticks":""},"colorscale":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"type":"surface"}],"table":[{"cells":{"fill":{"color":"#EBF0F8"},"line":{"color":"white"}},"header":{"fill":{"color":"#C8D4E3"},"line":{"color":"white"}},"type":"table"}]},"layout":{"annotationdefaults":{"arrowcolor":"#2a3f5f","arrowhead":0,"arrowwidth":1},"autotypenumbers":"strict","coloraxis":{"colorbar":{"outlinewidth":0,"ticks":""}},"colorscale":{"diverging":[[0,"#8e0152"],[0.1,"#c51b7d"],[0.2,"#de77ae"],[0.3,"#f1b6da"],[0.4,"#fde0ef"],[0.5,"#f7f7f7"],[0.6,"#e6f5d0"],[0.7,"#b8e186"],[0.8,"#7fbc41"],[0.9,"#4d9221"],[1,"#276419"]],"sequential":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]],"sequentialminus":[[0.0,"#0d0887"],[0.1111111111111111,"#46039f"],[0.2222222222222222,"#7201a8"],[0.3333333333333333,"#9c179e"],[0.4444444444444444,"#bd3786"],[0.5555555555555556,"#d8576b"],[0.6666666666666666,"#ed7953"],[0.7777777777777778,"#fb9f3a"],[0.8888888888888888,"#fdca26"],[1.0,"#f0f921"]]},"colorway":["#636efa","#EF553B","#00cc96","#ab63fa","#FFA15A","#19d3f3","#FF6692","#B6E880","#FF97FF","#FECB52"],"font":{"color":"#2a3f5f"},"geo":{"bgcolor":"white","lakecolor":"white","landcolor":"#E5ECF6","showlakes":true,"showland":true,"subunitcolor":"white"},"hoverlabel":{"align":"left"},"hovermode":"closest","mapbox":{"style":"light"},"paper_bgcolor":"white","plot_bgcolor":"#E5ECF6","polar":{"angularaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","radialaxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"scene":{"xaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"yaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"},"zaxis":{"backgroundcolor":"#E5ECF6","gridcolor":"white","gridwidth":2,"linecolor":"white","showbackground":true,"ticks":"","zerolinecolor":"white"}},"shapedefaults":{"line":{"color":"#2a3f5f"}},"ternary":{"aaxis":{"gridcolor":"white","linecolor":"white","ticks":""},"baxis":{"gridcolor":"white","linecolor":"white","ticks":""},"bgcolor":"#E5ECF6","caxis":{"gridcolor":"white","linecolor":"white","ticks":""}},"title":{"x":0.05},"xaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2},"yaxis":{"automargin":true,"gridcolor":"white","linecolor":"white","ticks":"","title":{"standoff":15},"zerolinecolor":"white","zerolinewidth":2}}},"xaxis":{"anchor":"y","domain":[0.0,1.0],"showgrid":false,"gridcolor":"black","linecolor":"black","range":[0,0.4],"dtick":0.05,"fixedrange":true},"yaxis":{"anchor":"x","domain":[0.9400000000000001,1.0],"showgrid":false,"showline":false,"showticklabels":false,"zeroline":false,"color":"black","fixedrange":true},"xaxis2":{"anchor":"y2","domain":[0.0,1.0],"type":"category"},"yaxis2":{"anchor":"x2","domain":[0.26,0.74],"fixedrange":true,"range":[0,0.24062500000000003],"title":{"text":"Frequency"}},"xaxis3":{"anchor":"y3","domain":[0.0,1.0]},"yaxis3":{"anchor":"x3","domain":[0.0,0.06]},"annotations":[{"font":{"size":16},"showarrow":false,"text":"Drift Score (PSI)","x":0.5,"xanchor":"center","xref":"paper","y":1.0,"yanchor":"bottom","yref":"paper"},{"font":{"size":16},"showarrow":false,"text":"Distribution Plot","x":0.5,"xanchor":"center","xref":"paper","y":0.74,"yanchor":"bottom","yref":"paper"},{"showarrow":false,"text":"* Showing the top 10 largest difference between categories out of total 26 categories.<br>Shown data is 60.94% of train data and 68.75% of test data.","x":0,"xanchor":"left","xref":"paper","y":-0.2,"yref":"paper"}],"legend":{"title":{"text":"Legend"},"yanchor":"top","y":0.6},"title":{"text":"# Detections per Label","x":0.5,"xanchor":"center"},"width":700,"height":400,"bargroupgap":0},                        {"responsive": true}                    ).then(function(){
                            
    var gd = document.getElementById('af294b75-16db-4401-875d-dcefe5ab6c05');
    var x = new MutationObserver(function (mutations, observer) {{
            var display = window.getComputedStyle(gd).display;
            if (!display || display === 'none') {{
                console.log([gd, 'removed!']);
                Plotly.purge(gd);
                observer.disconnect();
            }}
    }});

    // Listen for the removal of the full notebook cells
    var notebookContainer = gd.closest('#notebook-container');
    if (notebookContainer) {{
        x.observe(notebookContainer, {childList: true});
    }}

    // Listen for the clearing of the current output cell
    var outputEl = gd.closest('.output');
    if (outputEl) {{
        x.observe(outputEl, {childList: true});
    }}

                            })                };                });            </script>        </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 298-305

Implement Custom Metric
=======================

Some checks test the model performance and requires a metric in order to run. When using a custom task you will also
have to create a custom metric in order for those checks to work, since the built-in metrics don't know to handle
your data structure. The metrics need to conform to the API of
`pytorch-ignite <https://pytorch.org/ignite/metrics.html>`_.


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  40.054 seconds)


.. _sphx_glr_download_user-guide_vision_auto_tutorials_plot_custom_task_tutorial.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_custom_task_tutorial.py <plot_custom_task_tutorial.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_custom_task_tutorial.ipynb <plot_custom_task_tutorial.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
